--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,7 +53,6 @@
   <ItemGroup>
      <Compile Include="Assets\dungeon\FallingBlock.cs" />
      <Compile Include="Assets\dungeon\SpikeTrap.cs" />
-     <Compile Include="Assets\DungeonCreations.cs" />
      <Compile Include="Assets\hexScript\EdgeVertices.cs" />
      <Compile Include="Assets\hexScript\Grid.cs" />
      <Compile Include="Assets\hexScript\HecMetrics.cs" />
@@ -81,6 +80,7 @@
      <Compile Include="Assets\Scripts\cameraContoller.cs" />
      <Compile Include="Assets\Scripts\CameraOrbit.cs" />
      <Compile Include="Assets\Scripts\dungeon.cs" />
+     <Compile Include="Assets\Scripts\DungeonCreations.cs" />
      <Compile Include="Assets\Scripts\Inventory.cs" />
      <Compile Include="Assets\Scripts\Item.cs" />
      <Compile Include="Assets\Scripts\ItemDatabase.cs" />
@@ -89,7 +89,7 @@
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\RayCast3.cs" />
      <Compile Include="Assets\Scripts\RPGCharacterControllerFREE.cs" />
-     <Compile Include="Assets\spiningAxTrap.cs" />
+     <Compile Include="Assets\Scripts\spiningAxTrap.cs" />
      <None Include="Assets\RPG Character Animation Pack\Elements\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
      <None Include="Assets\RPG Character Animation Pack\Elements\ImageEffects\Shaders\NoiseEffectShaderRGB.shader" />
      <None Include="Assets\RPG Character Animation Pack\Elements\ImageEffects\Shaders\_DepthOfField\SeparableWeightedBlurDof34.shader" />
